--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog-paper-pi4erwupf-crazytrain9s-projects.vercel.app/"
+baseURL = "https://blog.echolab.online"
 title = "ExampleSite"
 paginate = 5
 theme = "PaperMod"
