--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.echolab.online"
+baseURL = "https://echolab.online"
 title = "ExampleSite"
 paginate = 5
 theme = "PaperMod"
